indus/test/test_examples/type_errors/binop2.tpc
tele bit<32> x;
tele bool y;
init {
    x = x + y;
} 
telemetry {} 
check {}